--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,6 @@ people to people make relationship.
     <li><a href="3.html">스포츠</a></li>
 </ol>
 
-<img src="handshake.jpg" width = "450">
+<a href="https://play.google.com/store/games?utm_source=apac_med&utm_medium=hasem&utm_content=Nov0920&utm_campaign=Evergreen&pcampaignid=MKT-EDR-apac-kr-1003227-med-hasem-py-Evergreen-Nov0920-Text_Search_BKWS-BKWS%7CONSEM_kwid_43700058439439279_creativeid_477138308523_device_c&gclid=CjwKCAiAvK2bBhB8EiwAZUbP1EwaIv4UbBIZ_v4ipUmtSC7NYSJIwyJZQXCRkGTJEcZQawtmikwRWxoCk_gQAvD_BwE&gclsrc=aw.ds&pli=1"><img src="handshake.jpg" width = "450"></a>
 </body>
 </html>
