이미지 링크 추가

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@ people to people make relationship.
     <li><a href="2.html">중고</a></li>
     <li><a href="3.html">스포츠</a></li>
 </ol>
-
+<strong>아래 이미지를 클릭하여 구글스토어로 이동</strong>
 <a href="https://play.google.com/store/games?utm_source=apac_med&utm_medium=hasem&utm_content=Nov0920&utm_campaign=Evergreen&pcampaignid=MKT-EDR-apac-kr-1003227-med-hasem-py-Evergreen-Nov0920-Text_Search_BKWS-BKWS%7CONSEM_kwid_43700058439439279_creativeid_477138308523_device_c&gclid=CjwKCAiAvK2bBhB8EiwAZUbP1EwaIv4UbBIZ_v4ipUmtSC7NYSJIwyJZQXCRkGTJEcZQawtmikwRWxoCk_gQAvD_BwE&gclsrc=aw.ds&pli=1"><img src="handshake.jpg" width = "450"></a>
 </body>
 </html>
