css로 약간의 디자인

--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,68 @@
 <!doctype html>
 <html>
 <meta charset="utf-8">
-<p>
-    <head><h1>맺음</h1></head></p>
-<body>
-people to people make relationship.
-<strong><u>check it up now!</u></strong><br>
-<body>
-<br>
-사람과 사람을 맺다<br>
-운동 팁부터 메이트까지<br>
 
-<strong>지금 바로 <u>맺음</u>에서 확인해보세요!</strong>
+    <title>맺음</title>
+    <style>
+        a{
+            color: black;
+            text-decoration: none;
+        }
+        h1{
+            font-style: normal;
+            font-size: 45px;
+            text-align: center;
+            margin: 0;
+            border-bottom: 1px solid gray;
+            padding: 25px;
+        }
+        body{
+            margin: 0;
 
+        }
+        ol{
+            margin: 0;
+            border-right: 1px solid gray;
+            padding: 20px;
+            width: 100px;
+        }
+
+
+        #grid{
+            display: grid;
+            grid-template-columns: 100px 1fr;
+            text-align: center;
+        }
+
+
+    </style>
+    <head>
+     <h1>맺음</h1>
+    </head>
+
+
+<body>
+<div id = grid>
 <ol>
     <li><a href="1.html">커뮤니티</a></li>
     <li><a href="2.html">중고</a></li>
     <li><a href="3.html">스포츠</a></li>
 </ol>
-<strong>아래 이미지를 클릭하여 구글스토어로 이동</strong>
-<a href="https://play.google.com/store/games?utm_source=apac_med&utm_medium=hasem&utm_content=Nov0920&utm_campaign=Evergreen&pcampaignid=MKT-EDR-apac-kr-1003227-med-hasem-py-Evergreen-Nov0920-Text_Search_BKWS-BKWS%7CONSEM_kwid_43700058439439279_creativeid_477138308523_device_c&gclid=CjwKCAiAvK2bBhB8EiwAZUbP1EwaIv4UbBIZ_v4ipUmtSC7NYSJIwyJZQXCRkGTJEcZQawtmikwRWxoCk_gQAvD_BwE&gclsrc=aw.ds&pli=1"><img src="handshake.jpg" width = "450"></a>
+    <div>
+        <p>
+    <a href="https://play.google.com/store/games?utm_source=apac_med&utm_medium=hasem&utm_content=Nov0920&utm_campaign=Evergreen&pcampaignid=MKT-EDR-apac-kr-1003227-med-hasem-py-Evergreen-Nov0920-Text_Search_BKWS-BKWS%7CONSEM_kwid_43700058439439279_creativeid_477138308523_device_c&gclid=CjwKCAiAvK2bBhB8EiwAZUbP1EwaIv4UbBIZ_v4ipUmtSC7NYSJIwyJZQXCRkGTJEcZQawtmikwRWxoCk_gQAvD_BwE&gclsrc=aw.ds&pli=1"><img src="handshake.jpg" width = "100"></a>
+    </p>
+    people to people make relationship.
+    <strong><u>check it up now!</u></strong><br>
+
+    <br>
+    사람과 사람을 맺다<br>
+    운동 팁부터 메이트까지<br>
+
+    <strong>지금 바로 <u>맺음</u>에서 확인해보세요!</strong>
+
+<strong>이미지를 클릭하여 구글스토어로 이동</strong>
+    </div>
+</div>
 </body>
 </html>
