--- a/src/1.html
+++ b/src/1.html
@@ -3,19 +3,49 @@
 <head>
 <meta charset = "UTF-8">
 <title>맺음</title>
+    <style>
+        a{
+            color:black;
+            text-decoration: none;
+        }
+        h1{
+            font-size: 40px;
+            font-style: normal;
+            text-align: center;
+            border-bottom: 1px solid gray;
+            padding: 20px;
+            margin: 0;
+        }
+        body{
+            margin: 0;
+        }
+        ol{
+            margin: 0;
+            border-right: 1px solid gray;
+            padding: 20px;
+            width: 100px;
+        }
+        #grid{
+            display: grid;
+            grid-template-columns: 100px 1fr;
+            text-align: center;
+
+        }
+
+    </style>
 </head>
 <body>
-<h1><a href="index.html">맺음</a></h1>
-
-<ol>
+    <h1><a href="index.html">맺음</a></h1>
+    <div id="grid">
+    <ol>
     <li><a href="1.html">커뮤니티</a></li>
     <li><a href="2.html">중고</a></li>
     <li><a href="3.html">스포츠</a></li>
-</ol>
+    </ol>
 
-<p>
-    <img src="community.jpg" width = "450"></p>
+        <div>
 <br>
+            <img src="community.jpg" width="100px">
 <h2><a href="https://en.wikipedia.org/wiki/Community"
        target="_blank" title="Community Specification">Community</a></h2>
 
@@ -32,23 +62,8 @@ in some respect from the larger society within which it exists:<br>
  diversity within a college community<br>
     London's Jewish and Muslim communities</p>
 
-<p>
-4. a group of associated nations sharing common interests or a common heritage:<br>
-    the community of Western Europe</p>
-<p>
-5. Ecclesiastical. a group of men or women leading a common life
-    according to a rule</p>
-<p>
-6. Ecology. an assemblage of interacting populations occupying a given
-    area</p>
-<p>
-7. joint possession, enjoyment, liability, etc.:<br>
-    community of property</p>
-<p>
-8. similarity; agreement; identity;<br>
-    community of interests<br></p>
-<p>
-9. the community, the public; society;<br>
-    the needs of the community<br></p>
+
+        </div>
+    </div>
 </body>
 </html>
