--- a/src/3.html
+++ b/src/3.html
@@ -3,36 +3,54 @@
 <head>
   <meta charset = "UTF-8">
   <title>맺음</title>
+  <style>
+    a{
+      color: black;
+      text-decoration: none;
+    }
+    h1{
+      font-size: 40px;
+      font-style: normal;
+      text-align: center;
+      margin: 0;
+      border-bottom: 1px solid gray;
+      padding: 20px;
+    }
+    ol{
+      margin: 0;
+      border-right: 1px solid gray;
+      width: 100px;
+      padding: 20px;
+    }
+    body{
+      margin: 0;
+    }
+    #grid{
+      display: grid;
+      grid-template-columns: 100px 1fr;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
 <h1><a href="index.html">맺음</a></h1>
-
+<div id="grid">
 <ol>
   <li><a href="1.html">커뮤니티</a></li>
   <li><a href="2.html">중고</a></li>
   <li><a href="3.html">스포츠</a></li>
 </ol>
-
-<p>
-  <img src="sport.jpg" width = "450"></p>
-<br>
-<h2><a href="https://namu.wiki/w/%EC%8A%A4%ED%8F%AC%EC%B8%A0"
-       target="_blank" title="스포츠 나무위키 설명">스포츠</a></h2>
-<p>
-  1. 레저
-</p>
-<p>
-  2. 구기
-</p>
-<p>
-  3. 산악
-</p>
-<p>
-  4. 해양
-</p>
-<p>
-  5. 동계
-</p>
+  <div>
+  <p>
+    <img src="sport.jpg" width = "100px"></p>
+  <br>
+  <h2><a href="https://namu.wiki/w/%EC%8A%A4%ED%8F%AC%EC%B8%A0"
+        target="_blank" title="스포츠 나무위키 설명">스포츠</a></h2>
+  <p>
+   레저, 구기, 산악, 해양, 동계 등등
+  </p>
+  </div>
+</div>
 
 </body>
 </html>
