--- a/src/2.html
+++ b/src/2.html
@@ -2,56 +2,20 @@
 <html>
 <head>
   <meta charset = "UTF-8">
+  <link rel="stylesheet" href="style.css">
   <title>맺음</title>
-  <style>
-    a {
-      color: black;
-      text-decoration: none;
-    }
-    h1{
-      font-style: normal;
-      font-size: 40px;
-      text-align: center;
-      border-bottom: 1px solid gray;
-      margin: 0;
-      padding: 20px;
-    }
-    ol{
-      border-right: 1px solid gray;
-      width: 100px;
-      margin: 0;
-      padding: 20px;
-    }
-    body{
-      margin: 0;
-    }
-    .saw{
-      color: gray;
-    }
-    #active{
-      color: red;
-    }
-    #grid{
-      display: grid;
-      grid-template-columns: 100px 1fr;
-      text-align: center;
-
-    }
-
-
-  </style>
 </head>
 <body>
 <h1><a href="index.html">맺음</a></h1>
 
   <div id="grid">
-    <ol>
-      <li><a href="1.html" class="saw">커뮤니티</a></li>
-      <li><a href="2.html" class="saw" id="active">중고</a></li>
-      <li><a href="3.html">스포츠</a></li>
-    </ol>
 
-    <div>
+      <a href="1.html">커뮤니티</a>
+      <a href="2.html">중고</a>
+      <a href="3.html">스포츠</a>
+
+
+    <div id="aticle">
       <img src="used.jpg" width = "100px"></p>
       <h2><a href="https://namu.wiki/w/%EC%A4%91%EA%B3%A0"
              target="_blank" title="중고 나무위키 설명">중고</a></h2>
