--- a/src/3.html
+++ b/src/3.html
@@ -2,45 +2,19 @@
 <html>
 <head>
   <meta charset = "UTF-8">
+  <link rel="stylesheet" href="style.css">
   <title>맺음</title>
-  <style>
-    a{
-      color: black;
-      text-decoration: none;
-    }
-    h1{
-      font-size: 40px;
-      font-style: normal;
-      text-align: center;
-      margin: 0;
-      border-bottom: 1px solid gray;
-      padding: 20px;
-    }
-    ol{
-      margin: 0;
-      border-right: 1px solid gray;
-      width: 100px;
-      padding: 20px;
-    }
-    body{
-      margin: 0;
-    }
-    #grid{
-      display: grid;
-      grid-template-columns: 100px 1fr;
-      text-align: center;
-    }
-  </style>
+
 </head>
 <body>
 <h1><a href="index.html">맺음</a></h1>
 <div id="grid">
-<ol>
-  <li><a href="1.html">커뮤니티</a></li>
-  <li><a href="2.html">중고</a></li>
-  <li><a href="3.html">스포츠</a></li>
-</ol>
-  <div>
+
+  <a href="1.html">커뮤니티</a>
+  <a href="2.html">중고</a>
+  <a href="3.html">스포츠</a>
+
+  <div id="article">
   <p>
     <img src="sport.jpg" width = "100px"></p>
   <br>
