자바스크립트 객체지향코딩

--- a/src/3.html
+++ b/src/3.html
@@ -6,13 +6,16 @@
   <title>맺음</title>
 
 </head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+<script src="colors.js"></script>
 <body>
 <h1><a href="index.html">맺음</a></h1>
 <div id="grid">
-
+  <p> <input type="button" value="야간" onclick="nightDayHandler(this);"></p>
   <a href="1.html">커뮤니티</a>
   <a href="2.html">중고</a>
   <a href="3.html">스포츠</a>
+
 
   <div id="article">
   <p>
